# autoresearch

./: .env.example  .gitignore  DESIGN.md  README.md  models.toml  pyproject.toml
experiments/baseline-lm-zhtw/: README.md  RECORDS.md  main.py  pyproject.toml  run_config.toml
experiments/baseline-lm-zhtw/lab/: checkpoint.py  data.py  evals.py  model.py  records.py  train.py
experiments/baseline-lm-zhtw/lab/model/: __init__.py  attention.py  block.py  ffn.py  gpt.py  rope.py
experiments/lm-zhtw-infspeed/: NOTES.md  README.md  main.py  pyproject.toml
experiments/lm-zhtw-infspeed/lab/: evals.py  test_kvcache.py  train.py
experiments/lm-zhtw-infspeed/lab/model/: attention.py  block.py  gpt.py  rope.py
goals/: debug.toml  example.toml  inference-speed.toml
prompt/: orchestrator.md
prompt/subagent/: executor.md  researcher.md
prompt/tools/: analyze_records.md  fetch_page.md  follow_up_subagent.md  get_status.md  kill_subagent.md  list_dir.md  list_sessions.md  read_file.md  revert_lab.md  run_experiment.md  spawn_subagent.md  web_search.md  wiki.md  wiki_audit.md  wiki_capture_source.md  wiki_graph_edges.md  wiki_graph_neighbors.md  wiki_graph_orphans.md  wiki_history.md  wiki_info.md  wiki_list.md  wiki_list_sources.md  wiki_read.md  wiki_read_source.md  wiki_retract_source.md  wiki_search.md  wiki_search_sources.md  wiki_source_info.md  wiki_tags.md  wiki_write.md  wiki_write_summary.md  write.md
scripts/: download_dataset.py
src/autoresearch/: __main__.py  config.py
src/autoresearch/bot/: discord_bot.py
src/autoresearch/llm/: _http.py  anthropic.py  base.py  openai.py
src/autoresearch/orchestrator/: channel.py  checkpoint.py  loop.py  spawn.py
src/autoresearch/queue/: jobs.py  labs.py  worker.py
src/autoresearch/subagent/: analyze.py  runner.py  tools.py
templates/: debug.md  example.md  inference-speed.md
tests/: test_analyze.py  test_bot.py  test_feed.py  test_llm.py  test_orchestrator.py  test_queue.py  test_runner.py  test_wiki.py
(+3 files in other folders)
