[project]
name = "autoresearch"
version = "0.1.0"
description = "Always-on autonomous LM-architecture research, steered from Discord"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "discord.py>=2.4",
    "ddgs>=9.14.4",
]

[project.optional-dependencies]
# Installed on the GPU box; the orchestrator process doesn't need these.
experiment = [
    "torch>=2.4",
    "tokenizers>=0.19",
    "datasets>=2.20",
]
# Rebuildable wiki search index (semantic path). Lexical FTS uses stdlib sqlite3.
index = [
    "chromadb>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoresearch"]
