# Baseline lab template — copied to lab/<lab-id>/ when a lab is created.
# The lab is a normal uv project: the experiment engineer may edit ANYTHING here
# (model, training loop, validation loop, deps). The dataset and tokenizer.json
# live outside the lab and are read-only.

[project]
name = "lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "tokenizers>=0.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lab"]
